pwr site link update

--- a/index.qmd
+++ b/index.qmd
@@ -54,7 +54,7 @@ Between 2017--2020, I traveled around the country in my shitty 2002 Honda CRV le
 
 ![](tq.jpg){fig-alt="tq"}
 
-* From 2014 until 2021 I was the emcee and general manager of [Party World Rasslin’](https://www.youtube.com/user/hexcrusher), almost certainly America’s largest alternative independent wrestling promotion.
+* From 2014 until 2021 I was the emcee and general manager of [Party World Rasslin’](https://www.youtube.com/watch?v=EZ6yOmA1ue0&list=PLA8pdHjNHe2zgH6mEnr9PXMCha6KmA9X3&index=19), almost certainly America’s largest alternative independent wrestling promotion.
 
 #### Talks
 * “[Beyond Single Payer.](https://www.youtube.com/watch?v=yeLxQ8vpIlg)” Chicago, IL. 2019
