--- a/index.qmd
+++ b/index.qmd
@@ -5,14 +5,14 @@ backgroundcolor: lavenderblush
 
 ### Welcome To My Web Site!!
 
-*My name is Timothy Faust and I write about healthcare. I live in Milwaukee with my girlfriend and my dog. I’ve also lived in Philadelphia, Dallas, San Francisco, Houston, Orlando, Brooklyn, Austin, Boston, Santa Fe, Denver, and Los Angeles. Wow!*
+*My name is Timothy Faust and I write about healthcare. I live in Milwaukee with my girlfriend and my dog. I like the Milwaukee Bucks, the Green Bay Packers, riding my bike, coffee with a whisper of Jameson, and Japanese neo-noir. I’ve also lived in Philadelphia, Dallas, San Francisco, Houston, Orlando, Brooklyn, Austin, Boston, Santa Fe, Denver, and Los Angeles. Wow!*
 
-**Email**: tim.faust(at)gmail.com | **Twitter**: [@crulge](https://www.twitter.com/crulge)
+**Email**: tim.faust(at)gmail.com | **Twitter**: [@crulge](https://www.twitter.com/crulge) | **Signal**: By request
 
 ### WRITING
 #### Recent work
 
-* ***[Health Justice Now](https://www.healthjusticenow.com/)***, Melville House, 2019. 
+* ***[Health Justice Now](https://www.healthjusticenow.com/)***, Melville House, 2019 
 	+ *Health Justice Now* is a book I wrote as a primer for any interested layperson about "what is American healthcare, how does it work, and why do I feel fucked over all the time?" as well as an argument for single-payer health care. The book also explores broader concepts in health justice; the social and structural determinants of health, how they shake out in all kinds of people's lives, and the massive popular movement we need if we are ever to be free in our bodies. 
 	+ "*The best concise explanation of why the United States needs single-payer health care — and needs to widen the definition of health care itself.*" — [Washington Post](https://www.washingtonpost.com/opinions/2019/08/14/why-we-need-single-payer-health-care-health-justice/)
 	+ This is also, as far as I can tell, the only health policy book which references both Trent Reznor's *Pretty Hate Machine* and Wrestlemania XX.
@@ -23,16 +23,17 @@ backgroundcolor: lavenderblush
 #### Medicare for All
 Between 2017--2020, I traveled around the country in my shitty 2002 Honda CRV learning about healthcare in different parts of the country and talking to whomever I could find---church groups, political groups, schools; whomever. That work culminated in *Health Justice Now*, but I wrote some stuff on the way.
 
-* “[He Doesn’t Have A Plan For That.](https://thebaffler.com/latest/he-doesnt-have-a-plan-for-that-faust)” The Baffler, 2020
+* “[He Doesn’t Have A Plan For That.](https://thebaffler.com/latest/he-doesnt-have-a-plan-for-that-faust)” *The Baffler*, 2020
 * “[The Transformative Potential of Single Payer.](https://theoutline.com/post/7735/health-justice-now-excerpt-single-payer)” The Outline, 2019
 * “[We Will Win Health Justice In America.](https://splinternews.com/we-will-win-health-justice-in-america-1837003733)” Splinter News, 2019
 * “[The Only Guide To Medicare For All That You Will Ever Need.](https://splinternews.com/the-only-guide-to-medicare-for-all-that-you-will-ever-n-1832594853)” Splinter News, 2019
 * “[The Very Bad Politics of 'Putting Healthcare Over Politics'.](https://splinternews.com/the-very-bad-politics-of-putting-healthcare-over-politi-1822806820)” Splinter News, 2018
+* "[The Case For Single-Payer.](https://jacobin.com/2017/10/single-payer-medicare-for-all-bernie-sanders)" *Jacobin*, 2017
 
 
 #### Beyond healthcare
-* “[You Too Can Donate A Kidney And Still Be A Normal Cool Guy Who Pounds Brewskis.](https://defector.com/you-too-can-donate-a-kidney-and-still-be-a-normal-cool-guy-who-pounds-brewskis)” Defector, 2023.
-	+ I donated my kidney to my friend Laura and documented it in the hope that other people might sign up to get tested.
+* “[You Too Can Donate A Kidney And Still Be A Normal Cool Guy Who Pounds Brewskis.](https://defector.com/you-too-can-donate-a-kidney-and-still-be-a-normal-cool-guy-who-pounds-brewskis)” Defector, 2023
+	+ I donated my left kidney, Turkey, to my friend Laura and documented the process in the hope that other people might sign up to get tested.
 * [*Palestine Speaks*](https://voiceofwitness.org/oral-history-book-series/palestine-speaks-voices-from-the-west-bank-and-gaza/). Voice of Witness, 2015
 	+ I was an assistant on Palestine Speaks, a collection of interviews about daily life in occupied Palestine.
 
@@ -41,7 +42,7 @@ Between 2017--2020, I traveled around the country in my shitty 2002 Honda CRV le
 [![](sottovoicetheboysareback.jpg){fig-alt="boys"}](https://www.vice.com/en/article/dpwa7w/i-played-the-boys-are-back-in-town-on-a-bar-jukebox-until-i-got-kicked-out-832)
 
 * “[I Played 'The Boys Are Back in Town' on a Bar Jukebox Until I Got Kicked Out.](https://www.vice.com/en/article/dpwa7w/i-played-the-boys-are-back-in-town-on-a-bar-jukebox-until-i-got-kicked-out-832)” Vice, 2014
-	+ One time I went on a date with a woman and she told me the story of how her ex had claimed he played “The Boys Are Back In Town” on repeat at a bar until he got kicked out. Solidarity, brother.
+	+ One time I went on a date with a woman and she told me the story of how her ex had claimed he played “The Boys Are Back In Town” on repeat at a bar until he got kicked out and then proceeded to give me a blow-by-blow of my own story. Solidarity, brother.
 
 ![](tedcruz.webp){fig-alt="tedcruz"}
 
@@ -49,7 +50,7 @@ Between 2017--2020, I traveled around the country in my shitty 2002 Honda CRV le
 * “Ted Cruz is the Zodiac Killer.” In 2016 me and my friend [Rory](https://www.twitter.com/BoneJail) made a t-shirt alleging ‘Ted Cruz is the Zodiac Killer,’ from a joke some of our internet friends made, and raised $70,000 for an abortion fund in Texas. Here’s some of the coverage. 
 	+ “[This Ted Cruz T-Shirt Is Helping Fund Abortions.](https://www.cosmopolitan.com/politics/news/a53952/ted-cruz-zodiac-killer-tshirts-abortion/)” *Cosmopolitan*, 2016
 	+ “[Texas Man Raises Funds For Abortion Rights With 'Ted Cruz Was The Zodiac Killer' Shirts.](https://www.cbsnews.com/sanfrancisco/news/texas-man-sells-ted-cruz-was-the-zodiac-killer-shirts-for-abortion-rights-group/)” CBS News, 2016
-	+ “[Ted Cruz is the Zodiac killer: the anatomy of a meme gone rogue.](https://www.theguardian.com/us-news/2016/mar/09/ted-cruz-zodiac-killer-meme)” The *Guardian*, 2016
+	+ “[Ted Cruz is the Zodiac killer: the anatomy of a meme gone rogue.](https://www.theguardian.com/us-news/2016/mar/09/ted-cruz-zodiac-killer-meme)” *The Guardian*, 2016
 	+ “[That One Time Calling Ted Cruz a Serial Killer Worked Out in Someone’s Favor.](https://www.houstoniamag.com/news-and-city-life/2016/03/t-shirts-designed-by-rice-grad-depict-ted-cruz-as-zodiac-killer-raise-70-000-for-abortion-advocacy)" Houstonia Magazine, 2016 
 
 ![](tq.jpg){fig-alt="tq"}
@@ -63,7 +64,7 @@ Between 2017--2020, I traveled around the country in my shitty 2002 Honda CRV le
 * I also show up in [Reclaim Idaho](https://www.reclaimidahofilm.com/), a documentary about the successful campaign to expand Medicaid in Ohio.
 
 
-### PICTURE OF MY DOG
+### PICTURE OF MY DOG UME
 ![](ume_orange_blanket.jpg){fig-alt="ume"}
 
 
