--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@ backgroundcolor: lavenderblush
 
 ### Welcome To My Web Site!!
 
-*My name is Timothy Faust and I write about healthcare. I live in Milwaukee with my girlfriend and my dog. I like the Milwaukee Bucks, the Green Bay Packers, riding my bike, coffee with a whisper of Jameson, and Japanese neo-noir. I’ve also lived in Philadelphia, Dallas, San Francisco, Houston, Orlando, Brooklyn, Austin, Boston, Santa Fe, Denver, and Los Angeles. Wow!*
+*My name is Timothy Faust and I write about healthcare. I live in Milwaukee with my girlfriend and my dog. I like the Milwaukee Bucks, the Green Bay Packers, riding my bike, coffee with a whisper of Jameson, short fiction, and Japanese neo-noir. I’ve also lived in Philadelphia, Dallas, San Francisco, Houston, Orlando, Brooklyn, Austin, Boston, Santa Fe, Denver, and Los Angeles. Wow!*
 
 **Email**: tim.faust(at)gmail.com | **Twitter**: [@crulge](https://www.twitter.com/crulge) | **Signal**: By request
 
