change url to be more friendly :(

--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ backgroundcolor: lavenderblush
 	+ This is also, as far as I can tell, the only health policy book which references both Trent Reznor's *Pretty Hate Machine* and Wrestlemania XX.
 
 * “[In American Indie Wrestling, Bodies Are Cheap And Healthcare is Not.](https://defector.com/in-american-indie-wrestling-bodies-are-cheap-and-healthcare-is-not)” Defector, 2023
-	+ *A longform piece about independent wrestlers, healthcare, and hustling. The work breaks down the body; every step is a bet with fate; and once you get the shit kicked out of you America makes it really, really hard to get better. “The blood may be fake, but the bleeding’s not.” - Dean Young*
+	+ A longform piece about independent wrestlers, healthcare, and hustling. The work breaks down the body; every step is a bet with fate; and once you get the shit kicked out of you America makes it really, really hard to get better. “The blood may be fake, but the bleeding’s not.” - Dean Young
 
 #### Medicare for All
 Between 2017--2020, I traveled around the country in my shitty 2002 Honda CRV learning about healthcare in different parts of the country and talking to whomever I could find---church groups, political groups, schools; whomever. That work culminated in *Health Justice Now*, but I wrote some stuff on the way.
