--- a/index.qmd
+++ b/index.qmd
@@ -9,6 +9,13 @@ backgroundcolor: lavenderblush
 
 **Email**: tim.faust(at)gmail.com | **Twitter**: [@crulge](https://www.twitter.com/crulge) | **Signal**: By request
 
+![](old_headshot_crop.jpg){fig-alt="old_headshot"}
+
+
+::: {.caption}
+*Photo credit: Laura Wing-Kamoosi*
+:::
+
 ### WRITING
 #### Recent work
 
@@ -54,6 +61,10 @@ Between 2017--2020, I traveled around the country in my shitty 2002 Honda CRV le
 	+ “[That One Time Calling Ted Cruz a Serial Killer Worked Out in Someone’s Favor.](https://www.houstoniamag.com/news-and-city-life/2016/03/t-shirts-designed-by-rice-grad-depict-ted-cruz-as-zodiac-killer-raise-70-000-for-abortion-advocacy)" Houstonia Magazine, 2016 
 
 ![](tq.jpg){fig-alt="tq"}
+
+::: {.caption}
+*Timmy Quivers*
+:::
 
 * From 2014 until 2021 I was the emcee and general manager of [Party World Rasslin’](https://www.youtube.com/watch?v=EZ6yOmA1ue0&list=PLA8pdHjNHe2zgH6mEnr9PXMCha6KmA9X3&index=19), almost certainly America’s largest alternative independent wrestling promotion.
 
