--- a/index.qmd
+++ b/index.qmd
@@ -29,6 +29,9 @@ backgroundcolor: lavenderblush
 * “[In American Indie Wrestling, Bodies Are Cheap And Healthcare is Not.](https://defector.com/in-american-indie-wrestling-bodies-are-cheap-and-healthcare-is-not)” Defector, 2023
 	+ A longform piece about independent wrestlers, healthcare, and hustling. The work breaks down the body; every step is a bet with fate; and once you get the shit kicked out of you America makes it really, really hard to get better. “The blood may be fake, but the bleeding’s not.” - Dean Young
 
+* [Error: A Newsletter About Healthcare](https://buttondown.email/error)
+	+ This is a a very infrequently issued newsletter I write about healthcare stuff that gets stuck in my craw. Fun for the whole family!
+
 #### Medicare for All
 Between 2017--2020, I traveled around the country in my shitty 2002 Honda CRV learning about healthcare in different parts of the country and talking to whomever I could find---church groups, political groups, schools; whomever. That work culminated in *Health Justice Now*, but I wrote some stuff on the way.
 
