--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@ backgroundcolor: lavenderblush
 
 ### Welcome To My Web Site!!
 
-*My name is Timothy Faust and I write about healthcare. I am alternately fascinated and infuriated by the policy, practice, and infrastructure of American healthcare; how it fucks people over, and how America makes it difficult-to-impossible to life safely and freely in one's body. I live in Milwaukee with my girlfriend and my dog, and I like the Milwaukee Bucks, the Green Bay Packers, black metal, riding my bike, coffee with a whisper of Jameson, short fiction, and Japanese neo-noir. Wow!*
+*My name is Timothy Faust and I write about healthcare. I am alternately fascinated and infuriated by the policy, practice, and infrastructure of American healthcare; how it fucks people over, and how America makes it difficult-to-impossible to live safely and freely in one's body. I live in Milwaukee with my girlfriend and my dog, and I like black metal, short fiction, the Milwaukee Bucks, riding my bike, the Green Bay Packers,  coffee with a whisper of Jameson, Japanese neo-noir, and designing tasteful, functional spreadsheets. Wow!*
 
 **Email**: tim.faust(at)gmail.com | **Twitter**: [@crulge](https://www.twitter.com/crulge) | **Signal**: By request
 
