added some fun stuff

--- a/index.qmd
+++ b/index.qmd
@@ -33,7 +33,7 @@ backgroundcolor: lavenderblush
 	+ This is a a very infrequently issued newsletter I write about healthcare stuff that gets stuck in my craw. Fun for the whole family!
 
 #### Medicare for All
-Between 2017--2020, I traveled around the country in my shitty 2002 Honda CRV learning about healthcare in different parts of the country and talking to whomever I could find---church groups, political groups, schools; whomever. That work culminated in *Health Justice Now*, but I wrote some stuff on the way.
+Between 2017--2020, I traveled around the country in my faithful, shitty 2002 Honda CRV learning about healthcare in different parts of the country and talking to whomever I could find---church groups, political groups, schools; whomever. That work culminated in *Health Justice Now*, but I wrote some stuff on the way.
 
 * “[He Doesn’t Have A Plan For That.](https://thebaffler.com/latest/he-doesnt-have-a-plan-for-that-faust)” *The Baffler*, 2020
 * “[The Transformative Potential of Single Payer.](https://theoutline.com/post/7735/health-justice-now-excerpt-single-payer)” The Outline, 2019
@@ -53,7 +53,7 @@ Between 2017--2020, I traveled around the country in my shitty 2002 Honda CRV le
 #### Goofing around
 [![](sottovoicetheboysareback.jpg){fig-alt="boys"}](https://www.vice.com/en/article/dpwa7w/i-played-the-boys-are-back-in-town-on-a-bar-jukebox-until-i-got-kicked-out-832)
 
-* “[I Played 'The Boys Are Back in Town' on a Bar Jukebox Until I Got Kicked Out.](https://www.vice.com/en/article/dpwa7w/i-played-the-boys-are-back-in-town-on-a-bar-jukebox-until-i-got-kicked-out-832)” Vice, 2014
+* “[I Played 'The Boys Are Back in Town' on a Bar Jukebox Until I Got Kicked Out.](https://www.vice.com/en/article/dpwa7w/i-played-the-boys-are-back-in-town-on-a-bar-jukebox-until-i-got-kicked-out-832)” Vice, 2015
 	+ One time I went on a date with a woman and she told me the story of how her ex had claimed he played “The Boys Are Back In Town” on repeat at a bar until he got kicked out and then proceeded to give me a blow-by-blow of my own story. Solidarity, brother.
 
 ![](tedcruz.webp){fig-alt="tedcruz"}
@@ -72,6 +72,8 @@ Between 2017--2020, I traveled around the country in my shitty 2002 Honda CRV le
 :::
 
 * From 2014 until 2021 I was the emcee and general manager of [Party World Rasslin’](https://www.youtube.com/watch?v=EZ6yOmA1ue0&list=PLA8pdHjNHe2zgH6mEnr9PXMCha6KmA9X3&index=19), almost certainly America’s largest alternative independent wrestling promotion.
+
+* I have also worked as a groundskeeper, a haunted house jabroni, a database guy, a bar critic, the worst EMT in Houston, and the operations manager at an abortion clinic.
 
 #### Talks
 * “[Beyond Single Payer.](https://www.youtube.com/watch?v=yeLxQ8vpIlg)” Chicago, IL. 2019
