--- a/index.qmd
+++ b/index.qmd
@@ -55,6 +55,7 @@ Between 2017--2020, I traveled around the country in my faithful, shitty 2002 Ho
 
 * “[I Played 'The Boys Are Back in Town' on a Bar Jukebox Until I Got Kicked Out.](https://www.vice.com/en/article/dpwa7w/i-played-the-boys-are-back-in-town-on-a-bar-jukebox-until-i-got-kicked-out-832)” Vice, 2015
 	+ One time I went on a date with a woman and she told me the story of how her ex had claimed he played “The Boys Are Back In Town” on repeat at a bar until he got kicked out and then proceeded to give me a blow-by-blow of my own story. Solidarity, brother.
+	+ _Update_: It looks like VICE is being scrubbed from the internet because profit is a terrible thing to organize society around. I backed up this article [here](https://docs.google.com/document/d/1Q6YKKuYZUvsX_M48-_E7CSlSZEi3YoTr5ECpcVYlpxg/edit). Semper VICE. 
 
 ![](tedcruz.webp){fig-alt="tedcruz"}
 
