--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@ backgroundcolor: lavenderblush
 
 ### Welcome To My Web Site!!
 
-*My name is Timothy Faust and I write about healthcare. I am alternately fascinated and infuriated by the policy, practice, and infrastructure of American healthcare; how it fucks people over, and how America makes it difficult-to-impossible to live safely and freely in one's body. I live in Milwaukee with my girlfriend and my dog, and I like black metal, short fiction, the Milwaukee Bucks, riding my bike, the Green Bay Packers,  coffee with a whisper of Jameson, Japanese neo-noir, and designing tasteful, functional spreadsheets. Wow!*
+*My name is Timothy Faust and I write about healthcare. I am alternately fascinated and infuriated by the policy, practice, and infrastructure of American healthcare; how it fucks people over, and how America makes it difficult-to-impossible to live safely and freely in one's body. I live in Milwaukee with my wife and my dog, and I like black metal, short fiction, the Milwaukee Bucks, riding my bike, the Green Bay Packers,  coffee with a whisper of Jameson, Japanese neo-noir, and designing tasteful, functional spreadsheets. Wow!*
 
 **Email**: tim.faust(at)gmail.com | **Twitter**: [@crulge](https://www.twitter.com/crulge) | **Signal**: By request
 
@@ -19,9 +19,9 @@ backgroundcolor: lavenderblush
 ### WRITING
 #### Recent work
 
-[![](hjnbook.png){fig-alt="hjnbook"}](https://www.healthjusticenow.com)
+[![](hjnbook.png){fig-alt="hjnbook"}](https://www.penguinrandomhouse.com/books/580342/health-justice-now-by-timothy-faust/)
 
-* ***[Health Justice Now](https://www.healthjusticenow.com/)***, Melville House, 2019 
+* ***[Health Justice Now](https://www.penguinrandomhouse.com/books/580342/health-justice-now-by-timothy-faust/)***, Melville House, 2019 
 	+ *Health Justice Now* is a book I wrote as a primer for any interested layperson about "what is American healthcare, how does it work, and why do I feel fucked over all the time?" as well as an argument for single-payer health care. The book also explores broader concepts in health justice; the social and structural determinants of health, how they shake out in all kinds of people's lives, and the massive popular movement we need if we are ever to be free in our bodies. 
 	+ "*The best concise explanation of why the United States needs single-payer health care — and needs to widen the definition of health care itself.*" — [Washington Post](https://www.washingtonpost.com/opinions/2019/08/14/why-we-need-single-payer-health-care-health-justice/)
 	+ This is also, as far as I can tell, the only health policy book which references both Trent Reznor's *Pretty Hate Machine* and Wrestlemania XX.
